Fix header link spacing

--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ button {
     display: flex;
     justify-content: right;
     align-items: center;
-    max-width: 40%;
-    gap: 15px;
+    max-width: 45%;
+    gap: 20px;
     flex: 1;
 }
 
